--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -40,3 +40,21 @@ updates:
       day: "monday"
       time: "04:00"
       timezone: "Canada/Pacific"
+
+  # Maintain dependencies for TypeScript and JavaScript
+  - package-ecosystem: "docker"
+    directory: "/client"
+    schedule:
+      interval: "weekly"
+      day: "monday"
+      time: "04:00"
+      timezone: "Canada/Pacific"
+
+  # Maintain dependencies for TypeScript and JavaScript
+  - package-ecosystem: "docker"
+    directory: "/server"
+    schedule:
+      interval: "weekly"
+      day: "monday"
+      time: "04:00"
+      timezone: "Canada/Pacific"
