--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,21 @@
-# Basic dependabot.yml file with
-# minimum configuration for two package managers
-
+# For details on how this file works refer to:
+#   - https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 version: 2
 updates:
-  # Enable version updates for npm
-  - package-ecosystem: "npm"
-    # Look for `package.json` and `lock` files in the `root` directory
+  # Maintain dependencies for GitHub Actions
+  #  - Check for updates once a week
+  #  - Group all updates into a single PR
+  - package-ecosystem: "github-actions"
     directory: "/"
-    # Check the npm registry for updates every month (weekdays)
+    schedule:
+      interval: "weekly"
+    groups:
+      all-actions:
+        patterns: [ "*" ]
+
+  # Maintain dependencies for TypeScript and JavaScript
+  - package-ecosystem: "npm"
+    directory: "/"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -31,7 +39,7 @@ updates:
 
   # Maintain dependencies for TypeScript and JavaScript
   - package-ecosystem: "npm"
-    directory: "/cypress"
+    directory: "cypress/integration"
     schedule:
       interval: "weekly"
       day: "monday"
